data/derived/comb/progs/unify/prog5049.ml.out
Characters 58-76:
  if n > 9 then digitsOfInt (n/10)::x else n;;
                ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
